deployments/istio/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: my-api
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: python-api-base
